--- a/post.css
+++ b/post.css
@@ -1,5 +1,97 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   outline: 0;
+}
+
+body {
+  display: grid;
+  background: #fff;
+  font-size: 1rem;
+  font-family: 'Montserrat', sans-serif;
+
+  grid-template-columns: minmax(200px, auto);
+  grid-template-rows: 15vh 80vh 5vh;
+
+  grid-template-areas:
+    'hd hd hd hd hd hd hd hd'
+    'sb ct ct ct ct ct ct ct'
+    'ft ft ft ft ft ft ft ft';
+}
+
+header {
+  display: flex;
+  grid-area: hd;
+  justify-content: center;
+  align-items: center;
+}
+
+header > h1 {
+  color: #777;
+}
+header > h2 {
+  color: #888;
+}
+
+sidebar {
+  grid-area: sb;
+}
+
+section {
+  grid-area: ct;
+}
+
+.box {
+  border: 1px solid #c0c0c0;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card {
+  background: #008b8b;
+  border: 1px solid #008b8b;
+  border-radius: 4px;
+  padding: 1rem;
+  margin: 0.5rem;
+  box-shadow: 0px 2px 4px rgba(0, 55, 55, 0.4);
+}
+
+.card > p {
+  color: #fff;
+}
+
+footer {
+  grid-area: ft;
+}
+
+@media (max-width: 320px) {
+}
+
+@media (max-width: 901px) {
+  body {
+    grid-template-columns: minmax(200px, 1fr);
+    grid-template-rows: 15vh 80vh 5vh;
+
+    grid-template-areas:
+      'hd hd hd hd hd hd hd hd'
+      'ct ct ct ct ct ct ct ct'
+      'ft ft ft ft ft ft ft ft';
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 900px) {
 }
