--- a/post.css
+++ b/post.css
@@ -16,9 +16,9 @@ body {
   grid-template-rows: 15vh 80vh 5vh;
 
   grid-template-areas:
-    'hd hd hd hd hd hd hd hd'
-    'sb ct ct ct ct ct ct ct'
-    'ft ft ft ft ft ft ft ft';
+    'hd hd hd'
+    'ct ct sb'
+    'ft ft ft';
 }
 
 header {
@@ -39,6 +39,43 @@ sidebar {
   grid-area: sb;
 }
 
+.search-box {
+  display: flex;
+  border-radius: 4px;
+  align-self: flex-end;
+  padding-right: 4rem;
+  margin: 0 0 1rem 1rem;
+}
+
+.search-term {
+  width: 100%;
+  height: 1.2rem;
+  outline: 0;
+  color: #c0c0c0;
+  border: 2px solid #c0c0c0;
+  border-right: none;
+  border-radius: 4px 0 0 4px;
+  align-self: flex-end;
+  padding: 0.2rem;
+}
+
+.search-term:focus {
+  color: #008b8b;
+}
+
+.search-button {
+  align-self: flex-end;
+  width: 40px;
+  height: 36px;
+  background: #008b8b;
+  text-align: center;
+  cursor: pointer;
+  font-size: 1rem;
+  border: 1px solid #008b8b;
+  border-radius: 0 4px 4px 0;
+  padding: 0.2rem;
+}
+
 section {
   grid-area: ct;
 }
@@ -51,6 +88,7 @@ section {
 
 .content {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
@@ -66,6 +104,13 @@ section {
 
 .card > p {
   color: #fff;
+}
+
+.social-media {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  margin-bottom: 1rem;
 }
 
 footer {
