--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
 
-  grid-template-columns: minmax(200px, auto);
+  grid-template-columns: minmax(50px, 200px) minmax(200px, auto);
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
 
@@ -23,6 +23,7 @@ body {
     'ft ft ft';
 }
 
+/* Beginning of Header section  */
 header {
   display: flex;
   grid-area: hd;
@@ -33,7 +34,7 @@ header {
 
 header > h1 {
   color: #777;
-  padding-left: 0.5rem;
+  padding: 1rem 0 0 1rem;
   text-align: center;
 }
 header > h2 {
@@ -42,29 +43,12 @@ header > h2 {
   text-align: center;
 }
 
-sidebar {
-  grid-area: sb;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding-top: 0.5rem;
-  font-size: 1.2rem;
-}
-
-section {
-  grid-area: ct;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .search-box {
   display: flex;
+  width: 15%;
   border-radius: 4px;
-  align-self: flex-end;
   padding-right: 4rem;
-  margin: 0 0 1rem 1rem;
+  margin: 0 0 0.5rem;
 }
 
 .search-term {
@@ -87,41 +71,98 @@ section {
   align-self: flex-end;
   width: 40px;
   height: 36px;
-  background: #008b8b;
+  background: #888;
   text-align: center;
   cursor: pointer;
   font-size: 1rem;
-  border: 1px solid #008b8b;
+  border: 1px solid #00468b;
   border-radius: 0 4px 4px 0;
   padding: 0.2rem;
 }
 
+button > .fa-search {
+  color: #fff;
+}
+
+.bar {
+  display: flex;
+  justify-content: space-between;
+  height: 6vh;
+  width: 100%;
+  background-color: #00468b;
+}
+
+.bar-list {
+  display: flex;
+  list-style: none;
+  margin-left: 2rem;
+  align-items: center;
+}
+
+.bar-list > li {
+  color: #fff;
+  padding-right: 1rem;
+}
+
+.bar-list > li > a {
+  color: #eee;
+  text-decoration: none;
+}
+/* End of Header section  */
+
+/* Beginning of Sidebar section  */
+
+sidebar {
+  grid-area: sb;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 0.5rem;
+  font-size: 1.2rem;
+  border-right: solid 1px #c0c0c0;
+}
+
+.menu-list {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+}
+
 .box {
-  border: 1px solid #c0c0c0;
   display: flex;
   flex-direction: column;
 }
 
 .menu-item {
-  color: #00b2b2;
+  color: #008b8b;
+  padding-left: 0.4rem;
 }
 
 .menu-item:hover {
-  background-color: #00b2b2;
+  background-color: #008b8b;
   color: #fff;
-}
-
-.submenu-item {
-  color: #00b2b2;
-  font-size: 1rem;
-  padding-left: 1rem;
+  transition: 0.1s ease-in;
 }
 
 .social-media {
   display: flex;
   cursor: pointer;
+  justify-content: space-evenly;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+
+  background-color: #008b8b;
+  color: #fff;
+}
+/* End of Sidebar section  */
+
+/* Beginning of Content section */
+section {
+  grid-area: ct;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 1rem;
+  align-items: center;
 }
 
 .content-header {
@@ -152,6 +193,35 @@ section {
   color: #333;
 }
 
+.photo-grid {
+  display: grid;
+  border: 1px solid #333;
+
+  grid-template-columns: minmax(200px, auto) minmax(50px, 600px);
+  grid-template-rows: auto auto;
+  min-height: 30vh;
+
+  grid-gap: 10px;
+  grid-template-areas:
+    'img1 img2'
+    'img1 img3';
+}
+
+.img1 {
+  border: 1px solid #333;
+  width: 5vw;
+}
+
+.img2 {
+  border: 1px solid tomato;
+  width: 5vw;
+}
+
+.img3 {
+  border: 1px solid #333;
+  width: 5vw;
+}
+
 .card {
   display: flex;
   align-items: center;
@@ -173,15 +243,22 @@ section {
   color: #008282;
   margin-top: 0.5rem;
 }
+/* End of Content section */
 
 footer {
   grid-area: ft;
   justify-content: center;
   align-items: center;
   font-size: 0.8rem;
+  border-top: solid 1px #c0c0c0;
+  background-color: #eee;
 }
 
+/* Media queries section */
 @media (max-width: 320px) {
+  .social-media {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 901px) {
@@ -208,14 +285,10 @@ footer {
   }
 
   .search-box {
-    width: 60%;
+    width: 50%;
     align-self: center;
     padding: 0;
-    margin: 0.5rem 0 0.5rem;
-  }
-
-  sidebar {
-    padding-left: 0.5rem;
+    margin: 0.5rem;
   }
 
   .content {
