--- a/post.css
+++ b/post.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 * {
   margin: 0;
@@ -10,7 +11,7 @@ body {
   display: grid;
   background: #fff;
   font-size: 1rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 
   grid-template-columns: minmax(200px, auto);
   grid-template-rows: 15vh 80vh 5vh;
@@ -26,6 +27,7 @@ header {
   grid-area: hd;
   justify-content: center;
   align-items: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 header > h1 {
@@ -80,8 +82,38 @@ section {
   grid-area: ct;
 }
 
+.content > img {
+  margin-top: 1rem;
+  border-radius: 4px;
+  box-shadow: 0px 2px 4px rgba(0, 55, 55, 0.4);
+}
+
+.content > .headers {
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.headers > .subheaders {
+  display: flex;
+  width: 50vw;
+  justify-content: space-between;
+  margin-top: 0.2rem;
+}
+
+.subheaders > p {
+  color: #777;
+}
+
+.content > p {
+  width: 50vw;
+  justify-content: center;
+  align-items: center;
+}
+
 .box {
-  border: 1px solid #c0c0c0;
   display: flex;
   flex-direction: column;
 }
@@ -91,19 +123,6 @@ section {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-}
-
-.card {
-  background: #008b8b;
-  border: 1px solid #008b8b;
-  border-radius: 4px;
-  padding: 1rem;
-  margin: 0.5rem;
-  box-shadow: 0px 2px 4px rgba(0, 55, 55, 0.4);
-}
-
-.card > p {
-  color: #fff;
 }
 
 .social-media {
@@ -122,19 +141,48 @@ footer {
 
 @media (max-width: 901px) {
   body {
-    grid-template-columns: minmax(200px, 1fr);
-    grid-template-rows: 15vh 80vh 5vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(200px, auto);
 
     grid-template-areas:
-      'hd hd hd hd hd hd hd hd'
-      'ct ct ct ct ct ct ct ct'
-      'ft ft ft ft ft ft ft ft';
+      'hd '
+      'sb'
+      'ct '
+      'ft ';
+
+    align-items: center;
   }
+
+  header > h1 {
+    color: #777;
+    padding: 1.5rem 0 0.5rem;
+  }
+  header > h2 {
+    color: #888;
+    font-size: 1.2rem;
+  }
+
+  .search-box {
+    width: 60%;
+    align-self: center;
+    padding: 0;
+    margin: 0.5rem 0 0.5rem;
+  }
+
+  sidebar {
+    padding-left: 0.5rem;
+  }
+
   .content {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    padding: 0.5rem;
+  }
+
+  .content-header {
+    font-size: 1.2rem;
   }
 }
 
