Add pictures to blog page

--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ header {
   justify-content: center;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
+  background-color: #eee;
 }
 
 header > h1 {
@@ -90,24 +91,31 @@ button > .fa-search {
   height: 6vh;
   width: 100%;
   background-color: #00468b;
+  box-shadow: 3px 0 5px grey;
 }
 
 .bar-list {
   display: flex;
-  list-style: none;
-  margin-left: 2rem;
+  list-style-type: none;
+  margin-left: 3rem;
   align-items: center;
 }
 
 .bar-list > li {
   color: #fff;
-  padding-right: 1rem;
+  padding-right: 2rem;
 }
 
 .bar-list > li > a {
   color: #eee;
   text-decoration: none;
 }
+
+.bar-list > li > a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
 /* End of Header section  */
 
 /* Beginning of Sidebar section  */
@@ -120,6 +128,7 @@ sidebar {
   padding-top: 0.5rem;
   font-size: 1.2rem;
   border-right: solid 1px #c0c0c0;
+  background-color: #eee;
 }
 
 .menu-list {
@@ -195,11 +204,12 @@ section {
 
 .photo-grid {
   display: grid;
-  border: 1px solid #333;
 
-  grid-template-columns: minmax(200px, auto) minmax(50px, 600px);
+  margin: 1rem;
+
+  grid-template-columns: auto auto;
   grid-template-rows: auto auto;
-  min-height: 30vh;
+  min-height: 10vh;
 
   grid-gap: 10px;
   grid-template-areas:
@@ -207,19 +217,43 @@ section {
     'img1 img3';
 }
 
+.photo-grid > img {
+  box-shadow: 0 0 4px rgba(0, 55, 55, 0.4);
+  transition: transform 0.3s;
+  overflow: hidden;
+}
+
 .img1 {
-  border: 1px solid #333;
-  width: 5vw;
+  max-width: 20vw;
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+.img1:hover {
+  transform: scale(1.02);
+  transform-origin: 50% 50%;
 }
 
 .img2 {
-  border: 1px solid tomato;
-  width: 5vw;
+  max-width: 8vw;
+  grid-column: 2/2;
+  grid-row: 1/2;
+}
+
+.img2:hover {
+  transform: scale(1.02);
+  transform-origin: 50% 50%;
 }
 
 .img3 {
-  border: 1px solid #333;
-  width: 5vw;
+  max-width: 8vw;
+  grid-column: 2/2;
+  grid-row: 2/3;
+}
+
+.img3:hover {
+  transform: scale(1.02);
+  transform-origin: 50% 50%;
 }
 
 .card {
@@ -255,7 +289,15 @@ footer {
 }
 
 /* Media queries section */
-@media (max-width: 320px) {
+@media (max-width: 600px) {
+  sidebar {
+    font-size: 1rem;
+  }
+
+  .bar-list > li {
+    font-size: 0.8rem;
+    padding-right: 0.5rem;
+  }
   .social-media {
     justify-content: center;
   }
@@ -309,4 +351,40 @@ footer {
 }
 
 @media (min-width: 600px) and (max-width: 900px) {
+  .photo-grid {
+    display: grid;
+
+    margin: 1rem;
+
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    min-height: 10vh;
+
+    grid-gap: 10px;
+    grid-template-areas:
+      'img1 img2'
+      'img1 img3';
+  }
+
+  .photo-grid > img {
+    box-shadow: 0 0 4px rgba(0, 55, 55, 0.4);
+  }
+
+  .img1 {
+    max-width: 20vw;
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+
+  .img2 {
+    max-width: 8vw;
+    grid-column: 1/2;
+    grid-row: 2/2;
+  }
+
+  .img3 {
+    max-width: 8vw;
+    grid-column: 2/2;
+    grid-row: 2/2;
+  }
 }
