--- a/post.css
+++ b/post.css
@@ -13,8 +13,9 @@ body {
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
 
-  grid-template-columns: minmax(200px, auto);
-  grid-template-rows: 15vh 80vh 5vh;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
 
   grid-template-areas:
     'hd hd hd'
@@ -28,6 +29,8 @@ header {
   justify-content: center;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
+  border-bottom: 1px solid #777;
+  background-color: #eee;
 }
 
 header > h1 {
@@ -37,8 +40,26 @@ header > h2 {
   color: #888;
 }
 
+h2 > a {
+  font-size: 0.8rem;
+}
+
+.bar {
+  display: flex;
+  justify-content: space-between;
+  height: 2vh;
+  width: 100%;
+  background-color: #00468b;
+  box-shadow: 3px 0 5px grey;
+}
+
+/* End of header section */
+
+/* Beginning of sidebar section */
 sidebar {
   grid-area: sb;
+  background-color: #eee;
+  border-left: 1px solid #c0c0c0;
 }
 
 .search-box {
@@ -46,7 +67,7 @@ sidebar {
   border-radius: 4px;
   align-self: flex-end;
   padding-right: 4rem;
-  margin: 0 0 1rem 1rem;
+  margin: 1rem;
 }
 
 .search-term {
@@ -72,20 +93,93 @@ sidebar {
   background: #008b8b;
   text-align: center;
   cursor: pointer;
+  color: #fff;
   font-size: 1rem;
   border: 1px solid #008b8b;
   border-radius: 0 4px 4px 0;
   padding: 0.2rem;
 }
 
+.social-media {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #777;
+  padding: 0.5rem;
+  background-color: #008b8b;
+  color: #fff;
+}
+
+.sections {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.sections > p {
+  color: #222;
+  font-size: 1.4rem;
+  border-bottom: 1px solid #222;
+  margin-bottom: 1rem;
+}
+
+.sections > ul > li {
+  list-style-type: none;
+}
+
+.fa-dog {
+  margin-left: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.fa-plane-alt {
+  margin-left: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.fa-futbol {
+  margin-left: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.fa-drum {
+  margin-left: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.past-posts {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0 1rem;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.past-posts > p {
+  color: #222;
+  font-size: 1.4rem;
+  border-bottom: 1px solid #222;
+  margin-bottom: 1rem;
+}
+
+.past-posts > ul > li {
+  font-size: 0.8rem;
+  list-style-type: none;
+  font-style: italic;
+}
+
+/* End of sidebar section */
+
 section {
   grid-area: ct;
 }
 
 .content > img {
-  margin-top: 1rem;
+  margin: 1rem 0 1rem;
   border-radius: 4px;
   box-shadow: 0px 2px 4px rgba(0, 55, 55, 0.4);
+  width: 50vw;
 }
 
 .content > .headers {
@@ -105,12 +199,14 @@ section {
 
 .subheaders > p {
   color: #777;
+  margin-bottom: 2rem;
 }
 
 .content > p {
   width: 50vw;
   justify-content: center;
   align-items: center;
+  color: #444;
 }
 
 .box {
@@ -125,15 +221,19 @@ section {
   align-items: center;
 }
 
-.social-media {
-  display: flex;
-  cursor: pointer;
-  justify-content: center;
+.sections {
   margin-bottom: 1rem;
 }
 
-footer {
+.footer {
+  display: flex;
   grid-area: ft;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #c0c0c0;
+  background-color: #eee;
+  font-size: 0.8rem;
+  color: #222;
 }
 
 @media (max-width: 320px) {
@@ -170,7 +270,7 @@ footer {
   }
 
   sidebar {
-    padding-left: 0.5rem;
+    font-size: 0.8rem;
   }
 
   .content {
@@ -181,8 +281,8 @@ footer {
     padding: 0.5rem;
   }
 
-  .content-header {
-    font-size: 1.2rem;
+  .past-posts {
+    display: none;
   }
 }
 
