--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ button > .fa-search {
   color: #fff;
 }
 
-.bar {
+navbar {
   display: flex;
   justify-content: space-between;
   height: 6vh;
@@ -150,6 +150,7 @@ sidebar {
 .menu-item:hover {
   background-color: #008b8b;
   color: #fff;
+  cursor: pointer;
   transition: 0.1s ease-in;
 }
 
@@ -276,6 +277,19 @@ section {
 .card > p {
   color: #008282;
   margin-top: 0.5rem;
+}
+
+.btn-card {
+  width: 80px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #035ab1;
+  box-shadow: 0 2px 4px #777;
+}
+
+.btn-card > a {
+  text-decoration: none;
+  color: #fff;
 }
 /* End of Content section */
 
