--- a/post.css
+++ b/post.css
@@ -13,7 +13,7 @@ body {
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
 
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto auto minmax(50px, 250px);
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
 
@@ -57,6 +57,10 @@ h2 > a {
 
 /* Beginning of sidebar section */
 sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   grid-area: sb;
   background-color: #eee;
   border-left: 1px solid #c0c0c0;
@@ -66,8 +70,8 @@ sidebar {
   display: flex;
   border-radius: 4px;
   align-self: flex-end;
-  padding-right: 4rem;
-  margin: 1rem;
+  width: 75%;
+  padding: 1rem;
 }
 
 .search-term {
@@ -106,7 +110,8 @@ sidebar {
   justify-content: center;
   margin-bottom: 1rem;
   border-bottom: 1px solid #777;
-  padding: 0.5rem;
+  padding: 0.5rem 0;
+  width: 100%;
   background-color: #008b8b;
   color: #fff;
 }
@@ -167,6 +172,35 @@ sidebar {
   font-size: 0.8rem;
   list-style-type: none;
   font-style: italic;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgray;
+  max-width: 12vw;
+  border-radius: 4px;
+  padding: 0.4rem;
+}
+.about > p {
+  color: #222;
+  text-align: center;
+  font-size: 1.2rem;
+  border-bottom: 1px solid #222;
+  margin-bottom: 1rem;
+}
+
+.about > img {
+  border-radius: 50%;
+  width: 8vw;
+}
+
+.about > h3 {
+  padding: 0.4rem;
+  font-size: 0.8rem;
+  color: #444;
 }
 
 /* End of sidebar section */
@@ -246,8 +280,8 @@ section {
 
     grid-template-areas:
       'hd '
-      'sb'
       'ct '
+      'sb'
       'ft ';
 
     align-items: center;
@@ -273,15 +307,31 @@ section {
     font-size: 0.8rem;
   }
 
+  .past-posts {
+    display: none;
+  }
+
+  .about {
+    max-width: 100vw;
+  }
+
+  .about > p {
+    font-size: 1rem;
+  }
+
+  .about > img {
+    width: 15vw;
+  }
+
+  .about > h3 {
+    font-size: 0.6rem;
+  }
+
   .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0.5rem;
-  }
-
-  .past-posts {
-    display: none;
   }
 }
