Rearranging files structure

--- a/css/post.css
+++ b/css/post.css
@@ -1,3 +1,4 @@
+/* Beginning of Blog Post section */
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
@@ -332,3 +333,4 @@ section {
     padding: 0.5rem;
   }
 }
+/* End of Blog Post section */
