--- a/css/header.css
+++ b/css/header.css
@@ -21,7 +21,7 @@ header > h2 {
 
 .search-box {
   display: flex;
-  width: 15%;
+  width: 30%;
   border-radius: 4px;
   padding-right: 4rem;
   margin: 0 0 0.5rem;
@@ -29,7 +29,7 @@ header > h2 {
 
 .search-term {
   width: 100%;
-  height: 1.2rem;
+  height: 36px;
   outline: 0;
   color: #c0c0c0;
   border: 2px solid #c0c0c0;
@@ -66,7 +66,7 @@ navbar {
   height: 6vh;
   width: 100%;
   background-color: #00468b;
-  box-shadow: 3px 0 5px grey;
+  box-shadow: 0 4px 4px grey;
 }
 
 .bar-list {
