--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,13 @@
   margin: 0;
   padding: 0;
   outline: 0;
+  box-sizing: border-box;
 }
 
 body {
   display: grid;
+  max-width: 1100px;
+  margin: 0 auto;
   background: #fff;
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
@@ -77,7 +80,7 @@ footer {
   }
 
   .search-box {
-    width: 50%;
+    width: 30%;
     align-self: center;
     padding: 0;
     margin: 0.5rem;
@@ -118,23 +121,24 @@ footer {
   }
 
   .photo-grid > img {
+    width: 100%;
     box-shadow: 0 0 4px rgba(0, 55, 55, 0.4);
   }
 
   .img1 {
-    max-width: 20vw;
+    /* max-width: 20vw; */
     grid-column: 1/3;
     grid-row: 1/2;
   }
 
   .img2 {
-    max-width: 8vw;
+    /* max-width: 8vw; */
     grid-column: 1/2;
     grid-row: 2/2;
   }
 
   .img3 {
-    max-width: 8vw;
+    /* max-width: 8vw; */
     grid-column: 2/2;
     grid-row: 2/2;
   }
