--- a/css/post.css
+++ b/css/post.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   outline: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -14,9 +15,12 @@ body {
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
 
-  grid-template-columns: auto auto minmax(50px, 250px);
+  grid-template-columns: auto 1fr auto;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+
+  max-width: 1100px;
+  margin: 0 auto;
 
   grid-template-areas:
     'hd hd hd'
@@ -51,7 +55,7 @@ h2 > a {
   height: 2vh;
   width: 100%;
   background-color: #00468b;
-  box-shadow: 3px 0 5px grey;
+  box-shadow: 0px 2px 5px grey;
 }
 
 /* End of header section */
@@ -71,13 +75,13 @@ sidebar {
   display: flex;
   border-radius: 4px;
   align-self: flex-end;
-  width: 75%;
+  width: 85%;
   padding: 1rem;
 }
 
 .search-term {
   width: 100%;
-  height: 1.2rem;
+  height: 36px;
   outline: 0;
   color: #c0c0c0;
   border: 2px solid #c0c0c0;
@@ -194,6 +198,7 @@ sidebar {
 }
 
 .about > img {
+  width: 100%;
   border-radius: 50%;
   width: 8vw;
 }
